# kosei

./: .travis.yml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  tox.ini
docker/: clean_virtualenv.sh
kosei/: __init__.py  adapters.py  constants.py  models.py  readers.py  schemas.py
tests/: test_kosei.py  test_settings.py
