[tool.poetry]
name = "kosei"
version = "0.1.0"
description = ""
authors = ["Romain Commandé <commande.romain+settings@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
colander = "^1.7.0"
tabulate = "^0.8.6"
colorama = "^0.4.3"
more-itertools = "^8.0.2"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
ipython = "^7.11.0"
tox = "^3.14.3"
pdbpp = "^0.10.2"
isort = "^4.3.21"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
